compiler/tests/fa/errors/default_arg_order_fa.salam
// انتظار: خطا۰۶۴
// زبان: فارسی
تابع بد(الف i32 = 1, ب i32) i32:
    بازگشت الف + ب
پایان

تابع اصلی:
    چاپ(بد(2, 3))
پایان
